add button and jquery function to change background/text color

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,12 @@ p{
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+.dark-background {
+  background-color: slategrey;
+
+}
+
+.light-text {
+  color: white;
+}
