add clickable paragraph and border box

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,16 @@ p{
 .light-text {
   color: blue;
 }
+
+.clickable {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
+}
+
+.border {
+  border: 2px solid blue;
+}
